correct overflow parts

--- a/Projects/ArchitectureWebsiteUI/src/scss/contacts.scss
+++ b/Projects/ArchitectureWebsiteUI/src/scss/contacts.scss
@@ -21,6 +21,7 @@
 }
 
 .contacts {
+  width: 100%;
   padding-top: 100px;
   padding-bottom: 100px;
 
@@ -50,6 +51,9 @@
 
   &__text-container {
     display: flex;
+    @media (max-width: toPixels(map.get($breakpoints, "md"))) {
+      display: block;
+    }
   }
 
   &__text {
@@ -69,7 +73,7 @@
     }
 
     @media (max-width: toPixels(map.get($breakpoints, "md"))) {
-      flex: 1 0 auto;
+      line-height: 40px;
     }
   }
 
